third_party/move/move-compiler-v2/tests/lambda/inline-parity/bug_10991b.exp

Diagnostics:
error: Only inline functions may have function-typed parameters, but non-inline function `Test::foo` has a function parameter:
  ┌─ tests/lambda/inline-parity/bug_10991b.move:3:9
  │
3 │     fun foo(g: |u64, u64| u64, x: u64, _y: u64): u64 {
  │         ^^^ - Parameter `g` has function-valued type `|(u64, u64)|u64`.
